style.css
  @import url('https://fonts.googleapis.com/css?family=Roboto:100,100i,300,400,500&display=swap');

  html {
      /*height: 100%;*/
      /*overflow-x: hidden;*/
      scroll-behavior: smooth;
  }   
  
  body {
      font-family: 'Roboto', sans-serif;
      font-weight:300;
      font-size: 1em;
      color: #222;
      height:100%;
      /* overflow-x: hidden; */
      overflow-y: scroll;
  }

  #about-container, 
  #portfolio-container, 
  #contact-container{
    padding-top:70px;
    padding-bottom:70px;
    height:100%;
    }
  
  .header {
      padding-top:15px;
      padding-bottom: 15px;
      /*background: white !important;*/
  }
  
  .logo {
      width:85px;
      height:85px;
      text-align:center;
      margin-bottom:25px;
  }
  
  .logo a {
      display:block;
      border:none;
      text-decoration: none;
      width:105px;
      height:105px;
      background: url(images/logo.png) no-repeat center;
      background-size: 100px 100px;
  }
  
  .home {
      height: 100%; 
      background: url(images/background_pattern.png) #FFEB00;
  }
  
  #headline_row {
      height:100%;
  }
  
  .headline{
      font-size: 3.5em;
      line-height: 1.2em;
  }
  
  .home-image {
      height:100%;
  }
  
  .jumbotron {
      background:none;
  }  
 
 .jumbotron h1.display-1 {
    font-weight: 500;
    letter-spacing: -0.02em;
    font-size:8em;
    line-height: 0.8em;
}

 #navi {
    z-index: 1030;
    /* padding-left:50px; */
    padding-top:50px;
    position: fixed;
    width: 220px;
    left: 20px;
    /* min-width: 20%; */
    text-align:center;
    /* min-height: 100vh; */
    /* clip-path: polygon(0 0, 50% 0, 100% 0%, 100% 85%, 50% 100%, 0% 85% ); */
   }

.navi-background{
    position: fixed;
    z-index: 1020;
    width: 220px;
    height: 400px;
    left: 20px;
    /* background-color:#FFEB00; */
    background-color: #fff;
    opacity: 30%;
    clip-path: polygon(0 0, 50% 0, 100% 0%, 100% 85%, 50% 100%, 0% 85% );    
}

.nav {
    font-weight:300;
    letter-spacing: 0.05em;
    font-size: 1.5em;
    display:inline;

}
.nav li a:visited {
    color: #000;
}

.nav li a:link {
    color: #000; 
    font-size:1.1em;
}

.nav li a:hover{
    color:#666;
}

.nav-pills .nav-link.active {
    background:transparent !important; 
    color:#FFEB00;
}

.nav-link.active li a:link, .nav-link.active li a:visited {
    border-bottom:3px solid #FFEB00;
}

#sidebarCollapse {
    visibility: hidden;
}

 #social-links ul {
    margin-right:30px;
    padding:0;
}

#social-links li a {
    width:25px;
    height:25px;
    background-size:22px;
    background-repeat:no-repeat;
    background-position: center;
    display:block;
}

#social-instagram a {
    background-image: url(images/Icon-awesome-instagram.png);
}
#social-instagram a:hover {
    background-image: url(images/Icon-awesome-instagram-hover.png);
}
#social-behance a {
    background-image: url(images/Icon-awesome-behance-square.png);
}
#social-behance a:hover {
    background-image: url(images/Icon-awesome-behance-square-hover.png);
}
#social-linkedin a {
    background-image: url(images/Icon-awesome-linkedin.png);
}
#social-linkedin a:hover {
    background-image: url(images/Icon-awesome-linkedin-hover.png);
}
 
.about {
    background: #D5688D;
    height:100%;
    min-height:100%;
}

.bg-turquois {
    background: #4EB9B1;
}

h1 {
    font-size:4em;
    font-weight: 500 !important;
    text-transform: uppercase;
}
 
 h2{
     font-weight:100;
     text-transform: uppercase;
 }
 
 .thin-font{
    font-weight:100 !important;
}
 
 .yellow {
     color:#FFEB00;
 }
 
 mark {
    background-color: #FFEB00;
}

.white-bg{
    background-color: white;
}

#skills p{
    font-size:2.5em;
}

#software p{
    font-size:1.3em;
}
 
.portfolio{
    height:100%;
    min-height:100%;
    background-color:#4EB9B1;
}

.portfolio .card {
    max-width:750px;
}

.portfolio .card-body {
    background-color: #FFEB00;
    max-width:750px;
}

.portfolio .card img{
    /*width:205px;*/
    overflow:hidden;
}

.portfolio .card-title{
    font-weight:100;
    font-style:italic;
}

.card-number {    
    font-style:oblique;
}
 
.contact{
     height:100%;
     min-height:100%;
     background-color:#F2880C;
 }
 
.btn, .btn-primary {
     background-color:transparent;
     border:1px solid #FFF;
     color:#4d4d4d;
 }

.btn:hover {
        border-color:#6EDDD4;
        background-color: #6EDDD4;

 }

a:visited, a:link  {
     color:#000;
 }

 a:hover {
     text-decoration: none;
     color:#FFF;
 }

 a.btn:link, a.btn:visited {
     color:#4d4d4d;
 }
 
 a.btn:hover {
     background-color: #6EDDD4;
     color:#FFF;
 }

 .footer {
     font-size:0.8em;
     text-align:center;
     padding:20px 0;
     background-color: #000;
     color: #FFF;
 }
 
 /* .wrapper{
     display:flex;
     width:100%; 
      align-items: stretch;
 } */


 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 /* @media screen and (max-width: 360px) {
     .headline{
         font-size: 3em;
     }
 } */
 
 /* Extra small devices (portrait phones, less than 576px)*/
 @media (max-width: 575.98px) { 
     html{
         height:auto;
     }
 
     body {
         height:auto;
         font-size:0.75em;
         overflow-x:hidden;
     }
     
     .home {
         height: auto; 
         padding-top: 50px;
     }
     
     .home-image{
         width:425px;
     }
    #about-container, 
    #portfolio-container, 
    #contact-container{
        padding:30px 10px !important;
        height:auto;
        margin:0 !important; 
    }

     /* div {
         display: inline-block;
     } */

     #navi {
        /*z-index: 1030;*/
        /*padding-left:50px;*/
        padding-top:0; 
        /* position: fixed; */
        text-align:center;
        font-size: 0.9em;
        width: 100%;
        /* margin-top:-250px; */
        height:auto;
        background-color: #fff;
        left:0;
    }
    
    #nav-bar {
        margin-top: -105px;
        height:150px;
        padding-bottom: 200px;
    }

    #nav-bar.active {
        margin-top: 105px;
        padding-bottom: 0px;
    } 

    #sidebarCollapse {
        visibility: visible;
        /* display:block; */
        height: 35px;
        width: 100%;
        border-width: 1px 1px 1px 0px;
        border-color: #fff;
        border-style:solid;
        border-radius: 5px;
        background-color:#F2F2F2;
        align-items: center;
        /* margin-top:50px; */
    }

    .logo {
        width:100%;
        height:105px;
        text-align:center;
        margin-bottom:15px;
        position:fixed;
        z-index: 1030;
        display:block;
        padding-top:10px;
        background-color: #fff;
    }
    
    .logo a {
        width:100%;
        height:85px;
        background-size: 75px 75px;
        background-position: center;        
    }

    .nav {
        /* padding-top:100px; */
        /* margin-top:-150px; */
        font-weight:300;
        letter-spacing: 0.05em;
        font-size: 1.5em;
        /* display:block; */
    }
    
    .jumbotron h1.display-1 {
        font-weight: 500;
        letter-spacing: -0.02em;
        font-size:5em;
        line-height: 0.8em;
    }
    .jumbotron h1.display-4 {
        font-weight: 500;
        letter-spacing: -0.02em;
        font-size:3em;
        line-height: 0.8em;
    }
    blockquote h3 {
        font-weight: 500;
        letter-spacing: -0.02em;
        font-size:1.3em;
        line-height: 1.1em;
    }

    #social-links ul {
        text-align: center;
        margin-top: 100px;
    }

    .portfolio .card-body, .portfolio .card  {
        min-width:350px;
        max-width:350px;
    }
    .navi-background{
        visibility: hidden;
    }

 }
 
@media (min-width: 768px) { 
    html{
        height:auto;
    }

    body {
        height:auto;
        overflow-x:hidden;
        font-size:0.75em;
    }

.home-image{
    min-width: 345px;
}

  } 

